vlib/v/checker/tests/sum_type_ref_variant_err.out
vlib/v/checker/tests/sum_type_ref_variant_err.vv:8:33: error: sum type cannot hold a reference type
    6 | }
    7 | type AliasType = string
    8 | type Alphabet1 = Abc | string | &Xyz
      |                                 ~~~~
    9 | type Alphabet2 = Abc | &Xyz | string
   10 | type Alphabet3 = &Xyz | Abc | string
Details: declare the sum type with non-reference types: `Alphabet1 = Xyz | ...`
and use a reference to the sum type instead: `var := &Alphabet1(Xyz{val})`
vlib/v/checker/tests/sum_type_ref_variant_err.vv:9:24: error: sum type cannot hold a reference type
    7 | type AliasType = string
    8 | type Alphabet1 = Abc | string | &Xyz
    9 | type Alphabet2 = Abc | &Xyz | string
      |                        ~~~~
   10 | type Alphabet3 = &Xyz | Abc | string
   11 | type Alphabet4 = Xyz | Abc | &AliasType
Details: declare the sum type with non-reference types: `Alphabet2 = Xyz | ...`
and use a reference to the sum type instead: `var := &Alphabet2(Xyz{val})`
vlib/v/checker/tests/sum_type_ref_variant_err.vv:10:18: error: sum type cannot hold a reference type
    8 | type Alphabet1 = Abc | string | &Xyz
    9 | type Alphabet2 = Abc | &Xyz | string
   10 | type Alphabet3 = &Xyz | Abc | string
      |                  ~~~~
   11 | type Alphabet4 = Xyz | Abc | &AliasType
Details: declare the sum type with non-reference types: `Alphabet3 = Xyz | ...`
and use a reference to the sum type instead: `var := &Alphabet3(Xyz{val})`
vlib/v/checker/tests/sum_type_ref_variant_err.vv:11:30: error: sum type cannot hold a reference type
    9 | type Alphabet2 = Abc | &Xyz | string
   10 | type Alphabet3 = &Xyz | Abc | string
   11 | type Alphabet4 = Xyz | Abc | &AliasType
      |                              ~~~~~~~~~~
Details: declare the sum type with non-reference types: `Alphabet4 = AliasType | ...`
and use a reference to the sum type instead: `var := &Alphabet4(AliasType(val))`
